removed width from savebtn to prevent word cut off

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,6 +34,5 @@ h5{
 
 .btn.save-btn{
     background-color:#9b111e;
-    width: 20px;
 }
 
